Update of the deck

--- a/TestETS/deck_ETS.yaml
+++ b/TestETS/deck_ETS.yaml
@@ -1,32 +1,32 @@
 Camera:
-  Focal_length: 50 #mm
-  Sensor_height: 29 #mm
+  Focal_length: 35 #mm
+  Sensor_height: 6.6 #mm
 
 Input_speckle: 
-  Step: 500
+  Step: 100
   Begining: 3
   Height: 27e-2
   Width: 21e-2
   Path: './Banque_Speckle/2mm/'
   Generic_name: 'Speckle_'
-  NbImage: 5
-  Position_centre: [[2.6516760266572756, 0, -0.3325620275974964], 
-                   [2.6516760266572756, -0.21, -0.3325620275974964], 
-                   [2.6516760266572756, 0.21, -0.3325620275974964],
-                   [2.6516760266572756,-0.105,-0.0625620275974964],
-                   [2.6516760266572756,0.105,-0.0625620275974964]]
+  NbImage: 1
+  Position_centre: [[2.30076106, 0, 0.1175688515]]#, 
+                   #[2.6516760266572756, -0.21, -0.3325620275974964], 
+                   #[2.6516760266572756, 0.21, -0.3325620275974964],
+                   #[2.6516760266572756,-0.105,-0.0625620275974964],
+                   #[2.6516760266572756,0.105,-0.0625620275974964]]
 
 Surface : 
-  a: -0.20452013209152206
+  a: -0.08715574275 #-0.20452013209152206
   b: 0
-  c: 0.9788623578263015
+  c: 0.9961946981 #0.9788623578263015
   Radius : 0.4
-  Position : [2.65167603,  0.        ,-0.46756203]
+  Position : [2.30076106,  0.        ,-0.01743114855]
   Surface_type : 'Plan'
-  Wingframe : [[ 2.65167603,  0.        , -0.46756203],
-               [ 5.5882631 ,  0.        ,  0.14599837],
-               [ 4.11996956,  0.3       , -0.16078183],
-               [ 4.11996956, -0.3       , -0.16078183]]
+  Wingframe : [[ 2.30076106,  0.        , -0.01743114855],
+               [ 2.69923894 ,  0.        ,  0.01743114855],
+               [ 2.5,  0.1         , 0],
+               [ 2.5, -0.1       , 0]]
 
 Output_speckle:
   Height_printable: 27.9e-2
