--- a/TestETS/deck_ETS_rot.yaml
+++ b/TestETS/deck_ETS_rot.yaml
@@ -9,25 +9,14 @@ Input_speckle:
   Width: 21e-2
   Path: './Banque_Speckle/2mm/'
   Generic_name: 'Speckle_'
-  #NbImage: 1
-  #Position_centre: [[2.30076106, 0, 0.1175688515]]#, 
-                   #[2.6516760266572756, -0.21, -0.3325620275974964], 
-                   #[2.6516760266572756, 0.21, -0.3325620275974964],
-                   #[2.6516760266572756,-0.105,-0.0625620275974964],
-                   #[2.6516760266572756,0.105,-0.0625620275974964]]
 
 Surface : 
-  Angle : 78 #deg
-  Length_Surface : 3.0 #m
-  Width_Surface : 0.6 #m
-  Dist_cam : 4.12 #m
+  Angle : 70 #deg 78
+  Length_Surface : 0.4 #m 3.0
+  Width_Surface : 0.2 #m 0.6
+  Dist_cam : 2.5 #m 4.12
   Radius : 0.4
-  #Position : [2.30076106,  0.        ,-0.01743114855]
   Surface_type : 'Plan'
-  #Wingframe : [[ 2.30076106,  0.        , -0.01743114855],
-               #[ 2.69923894 ,  0.        ,  0.01743114855],
-               #[ 2.5,  0.1         , 0],
-               #[ 2.5, -0.1       , 0]]
 
 Output_speckle:
   Height_printable: 27.9e-2
